--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="done">완료</string>
     <string name="location">MAP</string>
     <string name="menu">MENU</string>
+    <string name="time">TIME</string>
+    <string name="map">MAP</string>
+    <string name="add">등록</string>
+    <string name="cancel">취소</string>
 </resources>
